--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 1_introduction_apprentissage_statistique-part1/Exercises/correction/*
 2_introduction_apprentissage_statistique-part2/Exercises/correction/*
+/4_donnees_numeriques_et_structurees/Project/*.tar.gz
+/4_donnees_numeriques_et_structurees/Project/*.zip
+/4_donnees_numeriques_et_structurees/Project/data/
+
