--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@
 /4_donnees_numeriques_et_structurees/Project/*.tar.gz
 /4_donnees_numeriques_et_structurees/Project/*.zip
 /4_donnees_numeriques_et_structurees/Project/data/
+/4_donnees_numeriques_et_structurees-part2/Project/*.tar.gz
+/4_donnees_numeriques_et_structurees-part2/Project/*.zip
+/4_donnees_numeriques_et_structurees-part2/Project/data/
 
