ignore mongodb folder for data storage

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,6 @@
 /4_donnees_numeriques_et_structurees-part2/Project/*.tar.gz
 /4_donnees_numeriques_et_structurees-part2/Project/*.zip
 /4_donnees_numeriques_et_structurees-part2/Project/data/
+/3_donnees_numeriques_et_structurees-part1/TP_MongoDB/data/
+/3_donnees_numeriques_et_structurees-part1/TP_MongoDB/correction
 
