ignore log files

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@
 /4_donnees_numeriques_et_structurees-part2/Project/data/
 /3_donnees_numeriques_et_structurees-part1/TP_MongoDB/data/
 /3_donnees_numeriques_et_structurees-part1/TP_MongoDB/correction
-
+/3_donnees_numeriques_et_structurees-part1/TP_MongoDB/*.log*
