ignore heavy data folder for multimedia project

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /3_donnees_numeriques_et_structurees-part1/TP_MongoDB/data/
 /3_donnees_numeriques_et_structurees-part1/TP_MongoDB/correction
 /3_donnees_numeriques_et_structurees-part1/TP_MongoDB/*.log*
+/8_donnees_multimedia-part2/Project/data/
