ignore correction subfolder for tp_learning_curve

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /3_donnees_numeriques_et_structurees-part1/TP_MongoDB/correction
 /3_donnees_numeriques_et_structurees-part1/TP_MongoDB/*.log*
 /8_donnees_multimedia-part2/Project/data/
+9_apprentissage_supervise-part2/tp_learning_curve/correction
+
