--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@
 03_donnees_numeriques_et_structurees-part1/TP_MongoDB/*.log*
 08_donnees_multimedia-part2/Project/data/
 09_apprentissage_supervise-part2/tp_learning_curve/correction
-
+12_introduction_apprentissage_profond-part2/TP/code/images
