ignore *log* files in the whole repository

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 08_donnees_multimedia-part2/Project/data/
 09_apprentissage_supervise-part2/tp_learning_curve/correction
 12_introduction_apprentissage_profond-part2/TP/code/images
+*log*
