ignore Virual Machine for Bayesian Network exercises

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 08_donnees_multimedia-part2/Project/data/
 09_apprentissage_supervise-part2/tp_learning_curve/correction
 *log*
+*.ova
+15_reseaux_bayesiens_hmm-part1/System Volume Information/
