ignoring data folder for unsupervised learning project

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@
 09_apprentissage_supervise-part2/tp_learning_curve/correction
 *log*
 *.ova
+*.rar
 15_reseaux_bayesiens_hmm-part1/System Volume Information/
+14_apprentissage_non_supervise-part2/Project/data_papers/
