ignore some latex files for unsupervised learning project

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@
 *.rar
 15_reseaux_bayesiens_hmm-part1/System Volume Information/
 14_apprentissage_non_supervise-part2/Project/data_papers/
+14_apprentissage_non_supervise-part2/Project/functions.pyc
+14_apprentissage_non_supervise-part2/Project/report_latex/f@lot.tex
+14_apprentissage_non_supervise-part2/Project/report_latex/report.aux
+14_apprentissage_non_supervise-part2/Project/report_latex/report.bbl
+14_apprentissage_non_supervise-part2/Project/report_latex/report.blg
+14_apprentissage_non_supervise-part2/Project/report_latex/report.lof
+14_apprentissage_non_supervise-part2/Project/report_latex/report.lot
+14_apprentissage_non_supervise-part2/Project/report_latex/report.out
+14_apprentissage_non_supervise-part2/Project/report_latex/report.toc
+14_apprentissage_non_supervise-part2/Project/report_latex/tf@toc.tex
+14_apprentissage_non_supervise-part2/Project/utils.pyc
+
