ignore .jpg thumbnails of satellire images

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@
 23_projet_data_scientist/introduction/presentation-projet.tex.backup
 23_projet_data_scientist/introduction/presentation-projet.toc
 23_projet_data_scientist/introduction/presentation-projet.blg
-
+23_projet_data_scientist/France/*.jpg*
