update .gitignore to ignore auxiliary files of pre-processing latex report

--- a/.gitignore
+++ b/.gitignore
@@ -24,13 +24,28 @@
 14_apprentissage_non_supervise-part2/Project/report_latex/report.toc
 14_apprentissage_non_supervise-part2/Project/report_latex/tf@toc.tex
 14_apprentissage_non_supervise-part2/Project/utils.pyc
-25_projet_data_scientist/introduction/presentation-projet.aux
-25_projet_data_scientist/introduction/presentation-projet.bbl
-25_projet_data_scientist/introduction/presentation-projet.blg
-25_projet_data_scientist/introduction/presentation-projet.lof
-25_projet_data_scientist/introduction/presentation-projet.lot
-25_projet_data_scientist/introduction/presentation-projet.out
-25_projet_data_scientist/introduction/presentation-projet.tex.backup
-25_projet_data_scientist/introduction/presentation-projet.toc
-25_projet_data_scientist/introduction/presentation-projet.blg
+25_projet_data_scientist/introduction0/presentation-projet.aux
+25_projet_data_scientist/introduction0/presentation-projet.bbl
+25_projet_data_scientist/introduction0/presentation-projet.blg
+25_projet_data_scientist/introduction0/presentation-projet.lof
+25_projet_data_scientist/introduction0/presentation-projet.lot
+25_projet_data_scientist/introduction0/presentation-projet.out
+25_projet_data_scientist/introduction0/presentation-projet.tex.backup
+25_projet_data_scientist/introduction0/presentation-projet.toc
+25_projet_data_scientist/introduction0/presentation-projet.blg
 25_projet_data_scientist/France/*.jpg*
+25_projet_data_scientist/Uruguay/*.jpg*
+25_projet_data_scientist/Gabon/*.jpg*
+25_projet_data_scientist/USA/*.jpg*
+25_projet_data_scientist/Kenya/*.jpg*
+25_projet_data_scientist/NewZealand/*.jpg*
+25_projet_data_scientist/1_pre-processing/presentation-projet.aux
+25_projet_data_scientist/1_pre-processing/presentation-projet.bbl
+25_projet_data_scientist/1_pre-processing/presentation-projet.blg
+25_projet_data_scientist/1_pre-processing/presentation-projet.lof
+25_projet_data_scientist/1_pre-processing/presentation-projet.lot
+25_projet_data_scientist/1_pre-processing/presentation-projet.out
+25_projet_data_scientist/1_pre-processing/presentation-projet.tex.backup
+25_projet_data_scientist/1_pre-processing/presentation-projet.toc
+25_projet_data_scientist/1_pre-processing/presentation-projet.blg
+
