update .gitignore to ignore images folder (too big) of pre-processing latex report

--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,5 @@
 25_projet_data_scientist/1_pre-processing/pre-processing-projet.tex.backup
 25_projet_data_scientist/1_pre-processing/pre-processing-projet.toc
 25_projet_data_scientist/1_pre-processing/pre-processing-projet.blg
+25_projet_data_scientist/1_pre-processing/images/*
 
