update georeferencing latex report

--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,10 @@
 25_projet_data_scientist/1_pre-processing/pre-processing-projet.tex.backup
 25_projet_data_scientist/1_pre-processing/pre-processing-projet.toc
 25_projet_data_scientist/1_pre-processing/pre-processing-projet.blg
+25_projet_data_scientist/2_georeferencing/georeferencing.aux
+25_projet_data_scientist/2_georeferencing/georeferencing.lof
+25_projet_data_scientist/2_georeferencing/georeferencing.out
+25_projet_data_scientist/2_georeferencing/georeferencing.tex.backup
+25_projet_data_scientist/2_georeferencing/georeferencing.toc
 
 
