add latex unrelevant files for PageRank exam report'

--- a/.gitignore
+++ b/.gitignore
@@ -53,5 +53,10 @@
 25_projet_data_scientist/2_georeferencing/georeferencing.out
 25_projet_data_scientist/2_georeferencing/georeferencing.tex.backup
 25_projet_data_scientist/2_georeferencing/georeferencing.toc
+24_apprentissage_distribue_et_fouille_de_graphes-part2/Exam/report.aux
+24_apprentissage_distribue_et_fouille_de_graphes-part2/Exam/report.log
+24_apprentissage_distribue_et_fouille_de_graphes-part2/Exam/report.out
+24_apprentissage_distribue_et_fouille_de_graphes-part2/Exam/report.tex.backup
+
 
 
