ignore .TIF Landsat-8 images

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,6 @@
 24_apprentissage_distribue_et_fouille_de_graphes-part2/Exam/report.log
 24_apprentissage_distribue_et_fouille_de_graphes-part2/Exam/report.out
 24_apprentissage_distribue_et_fouille_de_graphes-part2/Exam/report.tex.backup
-
-
+LC*/
+*.TIF
 
