--- a/.gitignore
+++ b/.gitignore
@@ -59,4 +59,10 @@
 24_apprentissage_distribue_et_fouille_de_graphes-part2/Exam/report.tex.backup
 LC*/
 *.TIF
+25_projet_data_scientist/3_ndvi/ndvi.aux
+25_projet_data_scientist/3_ndvi/ndvi.lof
+25_projet_data_scientist/3_ndvi/ndvi.out
+25_projet_data_scientist/3_ndvi/ndvi.lot
+25_projet_data_scientist/3_ndvi/ndvi.toc
+25_projet_data_scientist/3_ndvi/ndvi.tex.backup
 
