--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,11 @@
 25_projet_data_scientist/1_pre-processing/pre-processing-projet.toc
 25_projet_data_scientist/1_pre-processing/pre-processing-projet.blg
 25_projet_data_scientist/2_georeferencing/georeferencing.aux
+25_projet_data_scientist/2_georeferencing/georeferencing.bbl
+25_projet_data_scientist/2_georeferencing/georeferencing.blg
+25_projet_data_scientist/2_georeferencing/georeferencing.log
 25_projet_data_scientist/2_georeferencing/georeferencing.lof
+25_projet_data_scientist/2_georeferencing/georeferencing.lot
 25_projet_data_scientist/2_georeferencing/georeferencing.out
 25_projet_data_scientist/2_georeferencing/georeferencing.tex.backup
 25_projet_data_scientist/2_georeferencing/georeferencing.toc
@@ -65,4 +69,5 @@ LC*/
 25_projet_data_scientist/3_ndvi/ndvi.lot
 25_projet_data_scientist/3_ndvi/ndvi.toc
 25_projet_data_scientist/3_ndvi/ndvi.tex.backup
+
 
