ignore some unrelevant latex files into data scientist project report

--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,16 @@ LC*/
 25_projet_data_scientist/3_ndvi/ndvi.toc
 25_projet_data_scientist/3_ndvi/ndvi.tex.backup
 
+25_projet_data_scientist/4_classification/biblio.bib~
+25_projet_data_scientist/4_classification/classification.aux
+25_projet_data_scientist/4_classification/classification.bbl
+25_projet_data_scientist/4_classification/classification.blg
+25_projet_data_scientist/4_classification/classification.lof
+25_projet_data_scientist/4_classification/classification.lot
+25_projet_data_scientist/4_classification/classification.out
+25_projet_data_scientist/4_classification/classification.pdf
+25_projet_data_scientist/4_classification/classification.tex.backup
+25_projet_data_scientist/4_classification/classification.toc
+
+
 
