ignore unrelevant latex files for beamer diaporama

--- a/.gitignore
+++ b/.gitignore
@@ -81,5 +81,13 @@ LC*/
 25_projet_data_scientist/4_classification/classification.tex.backup
 25_projet_data_scientist/4_classification/classification.toc
 
+25_projet_data_scientist/5_diaporama/diaporama.aux
+25_projet_data_scientist/5_diaporama/diaporama.log
+25_projet_data_scientist/5_diaporama/diaporama.nav
+25_projet_data_scientist/5_diaporama/diaporama.out
+25_projet_data_scientist/5_diaporama/diaporama.snm
+25_projet_data_scientist/5_diaporama/diaporama.tex.backup
+25_projet_data_scientist/5_diaporama/diaporama.toc
+
 
 
